--- a/svgshapes.html
+++ b/svgshapes.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     
-    <svg width="250" height="250">
-
+    <svg width="500" height="500">
+        <circle r="100" cx="250" cy="250" stroke="red" stroke-width="10" fill="none"></circle>
     </svg>
 
 </body>
