--- a/svgshapes.html
+++ b/svgshapes.html
@@ -10,6 +10,8 @@
     
     <svg width="500" height="500">
         <circle r="100" cx="250" cy="250" stroke="red" stroke-width="10" fill="none"></circle>
+
+        <rect x="175" y="175" width="150" height="150" rx="10" ry="100"></rect>
     </svg>
 
 </body>
