--- a/svgshapes.html
+++ b/svgshapes.html
@@ -12,6 +12,11 @@
         <circle r="100" cx="250" cy="250" stroke="red" stroke-width="10" fill="none"></circle>
 
         <rect x="175" y="175" width="150" height="150" rx="10" ry="100"></rect>
+
+        <circle r="50" cx="250" cy="250" stroke="red" stroke-width="10" fill="none"></circle>
+
+        <line x1="0" y1="250" x2="500" y2="250" stroke="black" stroke-width="15"></line>
+        <line x1="250" y1="0" x2="250" y2="500" stroke="black" stroke-width="15"></line>
     </svg>
 
 </body>
