added animation for circle

--- a/svgshapes.html
+++ b/svgshapes.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="animation.css">
     <title>svgshapes</title>
 </head>
 <body>
     
-    <svg width="500" height="500">
+    <svg width="500" height="500" class="svgexample1">
         <circle r="100" cx="250" cy="250" stroke="red" stroke-width="10" fill="none"></circle>
 
         <rect x="175" y="175" width="150" height="150" rx="10" ry="100"></rect>
 
-        <circle r="5git0" cx="250" cy="250" stroke="red" stroke-width="10" fill="none"></circle>
+        <circle r="50" cx="250" cy="250" stroke="red" stroke-width="10" fill="none" class="circle2"></circle>
 
         <line x1="0" y1="250" x2="500" y2="250" stroke="black" stroke-width="15"></line>
         <line x1="250" y1="0" x2="250" y2="500" stroke="black" stroke-width="15"></line>
