added line animation

--- a/svgshapes.html
+++ b/svgshapes.html
@@ -10,14 +10,14 @@
 <body>
     
     <svg width="500" height="500" class="svgexample1">
-        <circle r="100" cx="250" cy="250" stroke="red" stroke-width="10" fill="none"></circle>
+        <circle r="100" cx="250" cy="250" stroke="red" stroke-width="10" fill="none" class="circle1"></circle>
 
         <rect x="175" y="175" width="150" height="150" rx="10" ry="100"></rect>
 
         <circle r="50" cx="250" cy="250" stroke="red" stroke-width="10" fill="none" class="circle2"></circle>
 
-        <line x1="0" y1="250" x2="500" y2="250" stroke="black" stroke-width="15"></line>
-        <line x1="250" y1="0" x2="250" y2="500" stroke="black" stroke-width="15"></line>
+        <line x1="0" y1="250" x2="500" y2="250" stroke="black" stroke-width="15" class="line1"></line>
+        <line x1="250" y1="0" x2="250" y2="500" stroke="black" stroke-width="15" class="line2"></line>
 
         <polygon fill="green" points="10,10 50,10 10,50 50,50"></polygon>
         <polygon fill="green" points="490,10 450,10 490,50 450,50"></polygon>
