--- a/svgshapes.html
+++ b/svgshapes.html
@@ -19,11 +19,11 @@
         <line x1="0" y1="250" x2="500" y2="250" stroke="black" stroke-width="15" class="line1"></line>
         <line x1="250" y1="0" x2="250" y2="500" stroke="black" stroke-width="15" class="line2"></line>
 
-        <polygon fill="green" points="10,10 50,10 10,50 50,50"></polygon>
-        <polygon fill="green" points="490,10 450,10 490,50 450,50"></polygon>
+        <polygon fill="green" points="10,10 50,10 10,50 50,50" class="poly1"></polygon>
+        <polygon fill="green" points="490,10 450,10 490,50 450,50" class="poly2"></polygon>
 
-        <polygon fill="green" points="10,450 50,450 10,490 50,490"></polygon>
-        <polygon fill="green" points="490,450 450,450 490,490 450,490"></polygon>
+        <polygon fill="green" points="10,450 50,450 10,490 50,490" class="poly3"></polygon>
+        <polygon fill="green" points="490,450 450,450 490,490 450,490" class="poly4"></polygon>
     </svg>
 
 </body>
