--- a/pokeball.html
+++ b/pokeball.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <svg width="210mm" height="297mm" viewBox="0 0 210 297" version="1.1" id="svg5" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+    <svg width="100" height="100" viewBox="0 0 210 297" version="1.1" id="svg5" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" class="pokeballsvg">
         <defs id="defs2" />
         <g id="layer1">
             
