--- a/facetest.html
+++ b/facetest.html
@@ -1,7 +1,15 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!-- Created with Inkscape (http://www.inkscape.org/) -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="facetest.css">
+    <title>Document</title>
+</head>
+<body>
 
-<svg
+    <svg
    width="100mm"
    height="100mm"
    viewBox="0 0 210 297"
@@ -51,7 +59,7 @@
      inkscape:groupmode="layer"
      id="layer2"
      inkscape:label="Laag 2">
-    <rect 
+    <rect class="eye"
        style="fill:#ffffff;stroke:#000000;stroke-width:5.5"
        id="rect850"
        width="35.697113"
@@ -60,7 +68,7 @@
        y="140.28966"
        ry="10.887619"
        rx="3.2127404" />
-    <rect 
+    <rect class="eyebrow"
        style="fill:#323232;stroke:#000000;stroke-width:5.5;fill-opacity:1"
        id="rect926-7"
        width="38.552883"
@@ -69,7 +77,7 @@
        y="116.72957"
        rx="3.2127295"
        ry="9.9951916" />
-    <rect class="eye"
+    <rect class="eyebrow"
        style="fill:#323232;stroke:#000000;stroke-width:5.5;fill-opacity:1"
        id="rect926"
        width="38.552883"
@@ -87,7 +95,7 @@
        y="139.7542"
        ry="10.887619"
        rx="3.2127404" />
-    <path
+    <path class="mouth"
        style="fill:#ffffff;stroke:#000000;stroke-width:5.5"
        id="path902"
        sodipodi:type="arc"
@@ -99,7 +107,7 @@
        sodipodi:end="2.9356787"
        sodipodi:arc-type="slice"
        d="m 136.36298,186.69592 a 34.447716,11.066106 0 0 1 -30.90734,11.00751 34.447716,11.066106 0 0 1 -37.260363,-8.74491 l 33.719993,-2.2626 z" />
-    <rect
+    <rect class="eyelid"
        style="fill:#323232;fill-opacity:1;stroke:#000000;stroke-width:1.8;stroke-miterlimit:4;stroke-dasharray:none"
        id="rect2433"
        width="9.281251"
@@ -108,7 +116,7 @@
        y="149.21393"
        rx="3.2127295"
        ry="3.0342536" />
-    <rect
+    <rect class="eyelid"
        style="fill:#323232;fill-opacity:1;stroke:#000000;stroke-width:1.8;stroke-miterlimit:4;stroke-dasharray:none"
        id="rect2440"
        width="9.28125"
@@ -119,3 +127,6 @@
        ry="2.4987857" />
   </g>
 </svg>
+    
+</body>
+</html>
