--- a/facetest.html
+++ b/facetest.html
@@ -20,7 +20,8 @@
    xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
    xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
    xmlns="http://www.w3.org/2000/svg"
-   xmlns:svg="http://www.w3.org/2000/svg">
+   xmlns:svg="http://www.w3.org/2000/svg"
+   class="faceSvg">
   <sodipodi:namedview
      id="namedview7"
      pagecolor="#ffffff"
